--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div id = 'remediation'>
                 <div class = 'remediation-text'>
                     <h1>Remediation</h1>
-                    <p>I decided to do a website for my remediation as I wanted to further my skills in web development, and hence web development is a form of digital remediation. Thus, this website allowed for me to concisely adhere my writing with my coding knowledge, creating a beautiful project for the viewer.</p>
+                    <p>I decided to do a website for my remediation as I wanted to further my skills in web development, and hence web development is a form of digital remediation. Thus, this website allowed for me to concisely adjunct my writing with my coding knowledge, creating a beautiful project for the viewer.</p>
                 </div>
             </div>
             <div id = "remediation-exs">
